samples/_failures_safe/1761785330_bfd141_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc7589c4.c: In function ‘main’:
./samples/SAFE/__tmp_cc7589c4.c:146:17: error: expected ‘;’ at end of input
  146 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_cc7589c4.c:146:9: error: expected declaration or statement at end of input
  146 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_cc7589c4.c:146:9: error: expected declaration or statement at end of input
